Use the new nice EquationLabel class for all equations (issue #106)